# redis-semantic-router

./: .gitignore  README.md  data_leakage_analysis.ipynb  initial_exploration.ipynb  pyproject.toml  test_openai_router.py
config/: openai_test_config.yaml  pipeline_config.yaml  pipeline_config2.yaml
src/: main.py
src/baseline/: llm_classifier.py  prompts.py
src/config/: __init__.py  pipeline_config.yaml
src/llm_classifier/: __init__.py  llm_classifier.py
src/pipelines/: __init__.py  evaluation_pipeline.py  llm_cls_pipeline.py  semantic_cls_pipeline.py  semantic_training_pipeline.py
src/semantic_router/: redis_router.py  route_builder.py
src/semantic_routing/: __init__.py  redis_router.py  route_builder.py
src/shared/: __init__.py  base_classifier.py  data_types.py  exceptions.py  metrics.py  results_storage.py
src/utils/: __init__.py  config_loader.py  cost_calculator.py  data_loader.py  logger.py  redis_client.py
